--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,61 @@
+astroid==2.3.3
+certifi==2019.9.11
+chardet==3.0.4
+chart-studio==1.0.0
 Click==7.0
+colorama==0.4.1
+cycler==0.10.0
+DateTime==4.3
+decorator==4.4.1
+Django==2.2.7
 dominate==2.4.0
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 gunicorn==20.0.4
+idna==2.8
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+joblib==0.14.1
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+matplotlib==3.1.1
+mccabe==0.6.1
+networkx==2.4
+nose==1.3.7
 numpy==1.18.0
+object-mapper==1.1.0
+pandas==0.25.3
+pipenv==2018.11.26
+plotly==4.3.0
+postgres==3.0.0
 psycopg2==2.8.4
+psycopg2-binary==2.8.4
+psycopg2-pool==1.1
+pylint==2.4.3
+pyparsing==2.4.2
+PyQt5==5.13.2
+PyQt5-sip==12.7.0
+python-dateutil==2.8.0
+pytz==2019.3
+requests==2.22.0
+retrying==1.3.3
+scikit-learn==0.22
+scipy==1.3.3
+six==1.13.0
+sklearn==0.0
 SQLAlchemy==1.3.12
+sqlparse==0.3.0
+typed-ast==1.4.0
+urllib3==1.25.7
+virtualenv==16.7.7
+virtualenv-clone==0.5.3
 visitor==0.1.3
 Werkzeug==0.16.0
+wrapt==1.11.2
 WTForms==2.2.1
+zope.interface==4.7.1
